--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "bootstrap": "^5.2.3",
     "eslint": "8.28.0",
     "eslint-config-next": "13.0.6",
+    "jquery": "^3.6.3",
     "next": "13.0.6",
     "react": "18.2.0",
+    "react-bootstrap": "^2.7.0",
     "react-dom": "18.2.0"
   }
 }
