--- a/package.json
+++ b/package.json
@@ -19,10 +19,15 @@
     "eslint": "8.28.0",
     "eslint-config-next": "13.0.6",
     "jquery": "^3.6.3",
+    "mongoose": "^6.9.0",
     "next": "13.0.6",
     "react": "18.2.0",
     "react-bootstrap": "^2.7.0",
     "react-dom": "18.2.0",
-    "react-router-dom": "^6.7.0"
+    "react-redux": "^8.0.5",
+    "react-router-dom": "^6.7.0",
+    "redux": "^4.2.1",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-thunk": "^2.4.2"
   }
 }
