--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "eslint": "8.28.0",
     "eslint-config-next": "13.0.6",
     "jquery": "^3.6.3",
+    "mongodb": "^5.0.1",
     "mongoose": "^6.9.0",
     "next": "13.0.6",
     "react": "18.2.0",
